--- a/word_embeddings.ipynb
+++ b/word_embeddings.ipynb
@@ -18,7 +18,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Exercise 2\n"
+        "#Word embeddings\n",
+        "\n"
       ],
       "metadata": {
         "id": "T1z5296rarhZ"
@@ -36,38 +37,13 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install wikipedia-api"
+        "#!pip install wikipedia-api"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VKdivAj4vbAP",
-        "outputId": "cac36ca6-38f9-403a-c562-47f9a47fde0f"
+        "id": "VKdivAj4vbAP"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting wikipedia-api\n",
-            "  Downloading Wikipedia-API-0.5.4.tar.gz (18 kB)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from wikipedia-api) (2.23.0)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->wikipedia-api) (2.10)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->wikipedia-api) (3.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->wikipedia-api) (2021.10.8)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->wikipedia-api) (1.24.3)\n",
-            "Building wheels for collected packages: wikipedia-api\n",
-            "  Building wheel for wikipedia-api (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for wikipedia-api: filename=Wikipedia_API-0.5.4-py3-none-any.whl size=13477 sha256=a98ea4e0e6ad654ec3f32519ad81626483e4cb29037460d0e30df0c355bb076c\n",
-            "  Stored in directory: /root/.cache/pip/wheels/d3/24/56/58ba93cf78be162451144e7a9889603f437976ef1ae7013d04\n",
-            "Successfully built wikipedia-api\n",
-            "Installing collected packages: wikipedia-api\n",
-            "Successfully installed wikipedia-api-0.5.4\n"
-          ]
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
